# dayum

dayum/: Cargo.toml  declaration.rules  expression.rules  test.c
dayum/src/: lib.rs  logging.rs  main.rs
dayum/src/compiler/: chunk.rs  mod.rs  types.rs
dayum/src/lexer/: mod.rs  scan.rs
dayum/src/parser/: ast.rs  expression.rs  mod.rs  statement.rs  types.rs
dayum/src/type_checker/: annotation.rs  error.rs  mod.rs
dayum/src/vm/: heap.rs  mod.rs  ops.rs  types.rs
dayum/tests/: lexer_test.rs  parser_test.rs  tests.rs  type_checker_test.rs
dayum/tests/parser_cases/: for-statement.c  global_variable.c  if-statement.c
