[package]
name = "dayum"
version = "0.1.0"
edition = "2024"

[lib]
name = "dayum"
path = "src/lib.rs"

[[bin]]
name = "dayum"
path = "src/main.rs"

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
